--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse.fst import FST, EPSILON\n",
+    "from genparse.fst import FST, EPSILON, WFSA\n",
     "from genparse import Float\n",
     "from genparse.util import LarkStuff, bpe_wfst\n",
     "from arsenal import iterview\n",
@@ -36,18 +36,10 @@
    "source": [
     "import random\n",
     "random.seed(8675309)\n",
-    "#S = random.sample(T, 2000)\n",
-    "S = T\n",
+    "S = random.sample(T, 20)\n",
+    "#S = T\n",
     "#S"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e831a78b-2129-4f82-8f6a-d5365304b939",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -56,27 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T_b_c = bpe_wfst(S)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2234e55e-2f29-4bd1-91d8-08748d2db020",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(T_b_c.states)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caa2a69b-9161-4296-b088-1c5d9c29f7fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pl.hist([len(B) for B in iterview(list(E.blocks()))])"
+    "b2c = bpe_wfst(S).renumber\n",
+    "len(b2c.states)"
    ]
   },
   {
@@ -86,27 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = FST.from_string('zon purple MIDI Turtlesicken', Float)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4334bd93-077c-4dbd-8c2b-0effdbafe8ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#r = c @ T_b_c.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4a48745-02c7-4f20-ac5b-018571b058fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#len(r.states), len(r.accessible()), len(r.co_accessible())"
+    "c = FST.from_string('zon purple MIDI Turtlesicken', Float).renumber"
    ]
   },
   {
@@ -116,7 +69,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = T_b_c @ c"
+    "e = b2c @ c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1f635c7-409b-4059-9899-dab93004449d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9f0d342-a0b4-4cd4-af26-54517bcca9ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#e.trim"
    ]
   },
   {
@@ -182,16 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e720a5-517f-4661-b5ba-decf051c8dfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#[(i,x) for i, x in T if i == 30950]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "fd857ab7-7555-4c97-86c9-8b8be7761065",
    "metadata": {},
    "outputs": [],
@@ -226,14 +189,6 @@
    "source": [
     "m = lark_stuff.transducer()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85dc9d1e-0c1a-4ad2-b091-3bc94369b629",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -279,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82204636-7627-4677-be16-aa53cbcb0cc5",
+   "id": "3a475d2c-152d-4bd3-92f7-be272f293916",
    "metadata": {},
    "outputs": [],
    "source": []
