added many more tests of the lark interface - in particular, test that exercise the conversion to a character-level PCFG as they compose with the terminal automata.  One important lesson learned by these these test is the importance of the convergence threshold: since the probabilities are tiny (e.g., 1e-50) the convergence threshold needs to be smaller than that (i.e., a default of 1e-20 is nonsense unless the `Semiring.metric` were calibrated in a way that it is not).

--- a/notes/Lark-Interface.ipynb
+++ b/notes/Lark-Interface.ipynb
@@ -42,7 +42,7 @@
     "STAR: \"*\"\n",
     "NUMBER: /\\d+/\n",
     "\n",
-    "start: WS \"SELECT\" WS select_expr WS \"FROM\" WS from_expr\n",
+    "start: WS? \"SELECT\" WS select_expr WS \"FROM\" WS from_expr\n",
     "  [WS \"WHERE\" WS bool_condition] [WS \"GROUP BY\" WS var_list] [WS \"ORDER BY\" WS orderby_expr] WS EOS\n",
     "EOS: \"</s>\"\n",
     "select_expr: STAR | select_list\n",
