cleaning up lint warnings

--- a/notes/LM-Fun.ipynb
+++ b/notes/LM-Fun.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ba3f7044-7797-46ab-a98e-e36962f9ef2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse.lm import AutoTokenizer, AutoModelForCausalLM, TokenGPT2, TokenizingLM\n",
+    "from genparse.lm import TokenGPT2\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "from genparse import CFGLM\n",
     "from genparse.steer import LocalProduct\n",
     "from arsenal.maths import softmax, sample\n",
@@ -16,7 +17,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "ba2dc0bf-756a-4efc-989e-230961113829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TokenizingLM:\n",
+    "\n",
+    "    def __init__(self, tokenizer, model):\n",
+    "        self.model = model\n",
+    "        self.tokenizer = tokenizer\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        return self.model(self.tokenizer.encode(x))\n",
+    "\n",
+    "    def p_next(self, x):\n",
+    "        # warning: misalignment is might occur here!\n",
+    "        p = self.model.p_next(self.tokenizer.encode(x))\n",
+    "\n",
+    "        assert len(p) == self.tokenizer.vocab_size\n",
+    "        s = [self.tokenizer.decode([k]) for k in range(len(p))]\n",
+    "\n",
+    "        # XXX: apparently, multiple tokens in the mapping (token -> substring)\n",
+    "        # can point to the same substring!\n",
+    "        P = Counter()\n",
+    "        for k in range(len(p)):\n",
+    "            P[s[k]] += p[k].item()\n",
+    "\n",
+    "        return P\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6cb7bef5-4173-4ead-92ab-819ff5045317",
    "metadata": {},
    "outputs": [],
@@ -27,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6bcbac34-a10d-4004-9968-3a16eb34dcc5",
    "metadata": {},
    "outputs": [],
@@ -54,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c8b074a8-3409-4f00-8e87-2cc5da2803a8",
    "metadata": {},
    "outputs": [],
@@ -72,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "03a0efa3-b6e5-416c-9b99-4de01f18f393",
    "metadata": {},
    "outputs": [],
@@ -82,65 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b55478f1-91c3-4cfa-b874-321165ca8ecc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.1320329005960003e-09"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lm([0,1,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "32c1dd70-f983-4bae-930f-d955ce4a5161",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([5.8473e-03, 6.5075e-02, 2.4930e-03,  ..., 1.7837e-08, 1.4164e-07,\n",
-       "        1.0630e-03])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lm.p_next([0,1,2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6afc295b-b212-443f-b8ec-0d4a351fd8e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([6.5627e-03, 1.7961e-02, 6.6904e-02,  ..., 6.7191e-09, 1.5685e-07,\n",
-       "        2.9549e-04])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lm.p_next([0,1,2,3])"
    ]
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "da8bf971-2628-4a4a-8bfc-d417000fce79",
    "metadata": {},
    "outputs": [],
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d90506e8-44c8-4b16-806f-92d7c9a95f60",
    "metadata": {},
    "outputs": [],
@@ -175,103 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d13a0edd-b4de-4899-a72e-3c9cac8ea17a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>\\n</th>\n",
-       "      <td>0.782917</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>import</th>\n",
-       "      <td>0.026784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&gt;&gt;&gt;</th>\n",
-       "      <td>0.020917</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>\\n\\n</th>\n",
-       "      <td>0.020031</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>#</th>\n",
-       "      <td>0.014369</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>def</th>\n",
-       "      <td>0.013806</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&lt;|endoftext|&gt;</th>\n",
-       "      <td>0.012565</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.004378</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>(</th>\n",
-       "      <td>0.002497</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>$</th>\n",
-       "      <td>0.002110</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      1\n",
-       "0                      \n",
-       "\\n             0.782917\n",
-       " import        0.026784\n",
-       " >>>           0.020917\n",
-       "\\n\\n           0.020031\n",
-       " #             0.014369\n",
-       " def           0.013806\n",
-       "<|endoftext|>  0.012565\n",
-       " 1             0.004378\n",
-       " (             0.002497\n",
-       " $             0.002110"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pd.DataFrame(p.items()).set_index(0).sort_values(1, ascending=False).head(10)"
    ]
@@ -294,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c17f77f2-3f34-4278-9069-f1c137ad24d0",
    "metadata": {},
    "outputs": [],
@@ -305,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3e98527f-4397-433e-8c12-ad7aab79df2c",
    "metadata": {},
    "outputs": [],
@@ -326,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "507bb1fc-3a60-45ee-ab56-67fc76251f36",
    "metadata": {},
    "outputs": [],
@@ -354,27 +259,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fe3a1d60-4184-47f9-9ac3-8a04a8bea8ec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "The following is some code that implements the quick sort algorithm in Python:\n",
-       "\n",
-       "\n",
-       "Code\n",
-       "\n",
-       "\n",
-       "# = map([product x,"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Particle('The following is some code that implements the quick sort algorithm in Python:')\\\n",
     ".p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()\\\n",
@@ -383,21 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f3fffc5c-6d0a-477b-85d3-518dcea6edcc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Once upon a time, when Grootes knew of an Company under way to transfer possession of"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Particle('Once upon a time')\\\n",
     ".p().sample().p().sample().p().sample().p().sample().p().sample().p().sample().p().sample()\\\n",
@@ -414,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3ce6b2da-ecaf-4dba-a8ab-9c5ce0b428c2",
    "metadata": {},
    "outputs": [],
@@ -424,63 +301,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6cca1245-818e-44cb-9bcc-a20362c4a623",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(Once upon a time, the, 0.11067605018615723), (Once upon a time, I, 0.06365247815847397), (Once upon a time, it, 0.039929457008838654), (Once upon a time, when, 0.03200867399573326), (Once upon a time, there, 0.03037278912961483), (Once upon a time, you, 0.027559958398342133), (Once upon a time, a, 0.027318377047777176), (Once upon a time, we, 0.025240322574973106), (Once upon a time, he, 0.020900709554553032), (Once upon a time, they, 0.015777766704559326)]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p.p()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "30f58a29-2cf3-49b2-8abb-b3353190a64d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Once upon a time, Voyager"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p.p().sample()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "00573763-8e4c-43d5-ab26-a3d1a07ba0b0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Once upon a time, the world was a place of great beauty and great danger."
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(p.p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
     " .p().greedy().p().greedy().p().greedy().p().greedy().p().greedy().p().greedy()\n",
