reorganize package structure so that alignment strategies are grouped together

--- a/notes/FST.ipynb
+++ b/notes/FST.ipynb
@@ -30,7 +30,8 @@
     "from collections import Counter\n",
     "from IPython.display import HTML\n",
     "from genparse import CFG, FST, EPSILON, Float, CFGLM, add_EOS, prefix_transducer\n",
-    "from genparse.cfglm import locally_normalize, EOS, pcfg_check, explode, add_EOS, CharAlignedCFGLM\n",
+    "from genparse.cfglm import locally_normalize, EOS, pcfg_check, explode, add_EOS\n",
+    "from genparse.align import CharAlignedCFGLM\n",
     "from genparse.util import LarkStuff, hf_tokenizer, about, show_grammar, normalize, display_table, bpe2term_approx\n",
     "from genparse.inference import TraceSWOR\n",
     "from genparse.steer import generation_tree"
