--- a/notes/LM-Fun.ipynb
+++ b/notes/LM-Fun.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from genparse.lm import TokenGPT2\n",
+    "from genparse.lm import LLM, GreedilyTokenizedLLM\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "from genparse import CFGLM\n",
     "from genparse.steer import LocalProduct\n",
@@ -18,64 +18,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba2dc0bf-756a-4efc-989e-230961113829",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class TokenizingLM:\n",
-    "\n",
-    "    def __init__(self, tokenizer, model):\n",
-    "        self.model = model\n",
-    "        self.tokenizer = tokenizer\n",
-    "\n",
-    "    def __call__(self, x):\n",
-    "        return self.model(self.tokenizer.encode(x))\n",
-    "\n",
-    "    def p_next(self, x):\n",
-    "        # warning: misalignment is might occur here!\n",
-    "        p = self.model.p_next(self.tokenizer.encode(x))\n",
-    "\n",
-    "        assert len(p) == self.tokenizer.vocab_size\n",
-    "        s = [self.tokenizer.decode([k]) for k in range(len(p))]\n",
-    "\n",
-    "        # XXX: apparently, multiple tokens in the mapping (token -> substring)\n",
-    "        # can point to the same substring!\n",
-    "        P = Counter()\n",
-    "        for k in range(len(p)):\n",
-    "            P[s[k]] += p[k].item()\n",
-    "\n",
-    "        return P\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6cb7bef5-4173-4ead-92ab-819ff5045317",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#gpt_model = GPT2LMHeadModel.from_pretrained('gpt2')\n",
-    "#tokenizer = GPT2Tokenizer.from_pretrained('gpt2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6bcbac34-a10d-4004-9968-3a16eb34dcc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")\n",
-    "gpt_model = AutoModelForCausalLM.from_pretrained(\"gpt2\")"
+    "tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acb5fe9a-121f-4a10-a6b9-e87a56fda169",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -98,19 +46,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28d29ca-b8ed-43b9-bd51-f4a4e15aa800",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "03a0efa3-b6e5-416c-9b99-4de01f18f393",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm = TokenGPT2(gpt_model)"
+    "lm = LLM(AutoModelForCausalLM.from_pretrained(\"gpt2\"))"
    ]
   },
   {
@@ -158,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = TokenizingLM(tokenizer, lm).p_next('Once upon a time,')"
+    "p = GreedilyTokenizedLLM('gpt2').p_next('Once upon a time,')"
    ]
   },
   {
@@ -168,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = TokenizingLM(tokenizer, lm).p_next('The following is some code that implements quick sort in Python:')"
+    "p = GreedilyTokenizedLLM('gpt2').p_next('The following is some code that implements quick sort in Python:')"
    ]
   },
   {
@@ -204,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M = TokenizingLM(tokenizer, lm)\n",
+    "M = GreedilyTokenizedLLM('gpt2')\n",
     "#.p_terminal('The following is some code that implements quick sort in Python:')"
    ]
   },
